--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -12,19 +12,8 @@
 
 }
 
-/* header {
-    background-color: var(--Russian-Violet);
-    color: #eee;
-    text-align: center;
-    font-family: Shadows Into Light Two, Helvetica, sans-serif;
-    font-weight: bolder;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
-
 header img {
-    margin: 10px;
+    margin: 5px;
     width: 150px;
     height: auto;
     border-radius: 5px;  
@@ -41,7 +30,6 @@ header img {
     flex-direction: column;
     justify-content: space-between;
     font-size: x-large;
-    /* align-items: center; */
     gap: 10px;
 }
 
@@ -109,7 +97,7 @@ h1 {
     font-family: Shadows Into Light Two, Helvetica, sans-serif;
     text-align: center;
     font-weight: bolder;
-    font-size: 60px;
+    font-size: 50px;
 }
 .menu {
 	margin: 1rem auto;
@@ -130,126 +118,152 @@ h1 {
     background-color: var(--Thistle);
 }
 
-.grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-	gap: 10px;
-	justify-content: center;
-    
-}
-
-.card {
-    display: grid;
-    gap: 1rem;
-    padding: 1rem;
-    place-items: center;
-}
-
-.member-card {
-    text-align: center;
-    border: 2px solid black;
-    border-radius: 8px;
-    margin: 1rem;
-    background-color: var(--Thistle);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1); 
-    width: 450px;
-    height: 475px;
-}
-
-.member-card h2 {
-    font-family: Cinzel, Calibri, sans-serif;
-    font-weight: bolder;
-    font-size: xx-large;
-    padding: 10px;
-    background-color: var(--Delft-Blue);
-    color: white;
-    
-}
-
-.member-card img {
-    width: 250px;
-    height: auto;
-    padding: 5px;
-    margin: 20px;
-}
-
-.member-card p {
-    font-family: Cinzel, Calibri, sans-serif;
-    font-size: larger;
-    font-weight: bolder;
-    padding: 2px;
-}
-
-.list {
-    display: block;
-    width: 100%;
-    margin-left: 10px;
-    display: table;
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .list .member-card {
-    display: table-row;
-    border: none;
-    background: none;
-    box-shadow: none;
-    padding: 0;
-  }
-  
-  .list .member-card h2,
-  .list .member-card p {
-    display: table-cell;
-    padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    text-align: left;
-    color: #000;
-    font-size: 1rem;
-  }
-  
-  .list .member-card img {
-    display: none;
-  }
-  
-  .list .member-card h2 {
-    font-weight: bold;
-  }
-  
-  .list .member-card a {
-    text-decoration: underline;
-    color: var(--olive);
-  }
-  
-  .list .member-card:nth-child(even) {
-    background-color: var(--Powder-Blue);
-  }
-
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-family: Shadows Into Light Two, Helvetica, sans-serif;
-    font-size: x-large;
-    background: var(--Russian-Violet);
-    padding: 2rem;
-    text-align: center;
-    color: #fff;
-    text-decoration: none;
-}
-
-.bold {
-    font-weight: bolder;
-    padding-bottom: 10px;
-}
-
-.trademark,
-.socials {
-    padding-top: 30px;
-}
-
-/* @media only screen and (max-width: 20em) {
+@media only screen and (max-width: 20em) {
     .head-content {
         flex-direction: column;
     }
-} */
 
+    header img {
+        margin: 1px;
+        width: 60px;
+        height: auto;
+        border-radius: 5px;  
+        /* padding: 1rem; */
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(300px, 1fr);
+        gap: 10px;
+        justify-content: center;   
+    }
+
+    .card {
+        display: grid;
+        gap: 1rem;
+        padding: 1rem;
+        place-items: center;
+    }
+
+    .member-card {
+        text-align: center;
+        border: 2px solid black;
+        border-radius: 8px;
+        margin: 5px;
+        background-color: var(--Thistle);
+        box-shadow: 2px 2px 10px rgba(0,0,0,0.1); 
+        width: 250px;
+        height: 475px;
+    }
+
+    .member-card h2 {
+        font-family: Cinzel, Calibri, sans-serif;
+        font-weight: bolder;
+        font-size: xx-large;
+        padding: 10px;
+        background-color: var(--Delft-Blue);
+        color: white;
+        
+    }
+
+    .member-card img {
+        width: 200px;
+        height: auto;
+        padding: 5px;
+        margin: 20px;
+    }
+
+    .member-card p {
+        font-family: Cinzel, Calibri, sans-serif;
+        font-size: larger;
+        font-weight: bolder;
+        padding: 2px;
+    }
+
+    footer {
+        flex-direction: column;
+        font-family: Shadows Into Light Two, Helvetica, sans-serif;
+        font-size: x-large;
+        background: var(--Russian-Violet);
+        padding: 2rem;
+        text-align: center;
+        color: #fff;
+        text-decoration: none;
+    }
+}
+    
+
+@media only screen and (min-width: 20.01em) and (max-width: 39.99em) {
+    /* .head-content, .top {
+        grid-template-columns: 1fr 2fr;
+    } */
+
+    header img {
+        margin: 1px;
+        width: 60px;
+        height: auto;
+        border-radius: 5px;  
+       
+    }
+
+    .grid {
+        display: grid;
+        gap: 10px;
+        justify-content: center;   
+    }
+
+    .card {
+        display: grid;
+        gap: 1rem;
+        padding: 1rem;
+        place-items: center;
+    }
+
+    .member-card {
+        text-align: center;
+        border: 2px solid black;
+        border-radius: 8px;
+        margin: auto;
+        background-color: var(--Thistle);
+        box-shadow: 2px 2px 10px rgba(0,0,0,0.1); 
+        width: 300px;
+        height: 450px;
+    }
+
+    .member-card h2 {
+        font-family: Cinzel, Calibri, sans-serif;
+        font-weight: bolder;
+        font-size: xx-large;
+        padding: 10px;
+        background-color: var(--Delft-Blue);
+        color: white;
+        
+    }
+
+    .member-card img {
+        width: 250px;
+        height: auto;
+        padding: 5px;
+        margin: 20px;
+    }
+
+    .member-card p {
+        font-family: Cinzel, Calibri, sans-serif;
+        font-size: larger;
+        font-weight: bolder;
+        padding: 2px;
+    }
+
+    footer {
+        flex-direction: column;
+        font-family: Shadows Into Light Two, Helvetica, sans-serif;
+        font-size: x-large;
+        background: var(--Russian-Violet);
+        padding: 2rem;
+        text-align: center;
+        color: #fff;
+        text-decoration: none;
+    }
+
+    
+}
